# life-cli

./: .gitignore  .specwright.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test-config.yml  test-edge-cases.yml
.specwright/aips/: cockpit-scripts-to-verbs.yaml  job-runner-spec.yaml  life-cli-initial-spec.yaml  life-gen-commands-spec.yaml
.specwright/specs/: cockpit-scripts-to-verbs.md  config-management-spec.md  job-runner-spec.md  life-cli-initial-spec.md  life-gen-commands-spec.md
docs/: ARCHITECTURE.md
docs/evaluation/: EVALUATION.md
examples/: life.yml
examples/jobs/: dataverse.yaml  graph.yaml  workflows.yaml
src/life/: __init__.py  cli.py  config.py  config_manager.py  date_utils.py  event_client.py  job_runner.py  registry.py  runner.py  state.py  validation.py
src/life/commands/: __init__.py  config.py  email.py  jobs.py  merge.py  pipeline.py  process.py  run.py  status.py  sync.py  today.py
src/life/jobs/: email.yaml  pipeline.yaml
src/life_jobs/: __init__.py  dataverse.py  email.py  graph.py  pipeline.py  shell.py
tests/: __init__.py  conftest.py  test_commands_run.py  test_config.py  test_config_command.py  test_config_manager.py  test_date_utils.py  test_email_commands.py  test_job_runner.py  test_life_jobs_dataverse.py  test_life_jobs_email.py  test_life_jobs_graph.py  test_life_jobs_shell.py  test_pipeline.py  test_registry.py  test_runner.py  test_state.py  test_sync_integration.py  test_validation.py
